# msgcheck

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  CHANGELOG.md  ChangeLog.adoc  ChangeLog.asciidoc  ChangeLog.md  Makefile  README.adoc  README.asciidoc  README.md  REUSE.toml  msgcheck.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: ci.yml  codeql-analysis.yml  pythonpackage.yml  reuse.yml  tests.yml
msgcheck/: __init__.py  msgcheck.py  po.py  utils.py
src/msgcheck/: __init__.py  msgcheck.py  po.py  utils.py
tests/: __init__.py  fr.po  fr_compile.po  fr_errors.po  fr_invalid_utf8.po  fr_language.po  fr_spelling.po  fr_spelling_id.po  fr_spelling_str.po  pwl2.txt  test_msgcheck.py
